--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -6,6 +6,12 @@
 			src="https://kit.fontawesome.com/b440ca4c84.js"
 			crossorigin="anonymous"
 		></script>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap"
+			rel="stylesheet"
+		/>
 		<title>Simple React App</title>
 	</head>
 	<body>
