--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -12,7 +12,7 @@
 			href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap"
 			rel="stylesheet"
 		/>
-		<title>Simple React App</title>
+		<title>Teddir</title>
 	</head>
 	<body>
 		<div id="root"></div>
