--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<script
 			src="https://kit.fontawesome.com/b440ca4c84.js"
 			crossorigin="anonymous"
@@ -16,6 +17,5 @@
 	</head>
 	<body>
 		<div id="root"></div>
-		
 	</body>
 </html>
